# GENISYS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  deploy.py
Backend/: CMakeLists.txt
Backend/Source/: BackendApp.h  CommandRouter.h  Main.cpp  SileroVad.h  VoiceEngine.cpp  VoiceEngine.h
DataBridge/: CMakeLists.txt
DataBridge/Source/: PluginProcessor.h
DebugConsole/: CMakeLists.txt
DebugConsole/Source/: DebugApp.h  Main.cpp
DeepSpeechRealtime/: DeepSpeechRealtime.jucer
DeepSpeechRealtime/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
DeepSpeechRenderer/: DeepSpeechRenderer.jucer  README.md
DeepSpeechRenderer/Source/: Main.cpp
DeepSpeechRenderer/doc/: Genesis command test set 001  Genesis command test set 002
Frontend/: CMakeLists.txt
Frontend/Source/: FrontendApp.h  Main.cpp  StudioBuilderWizard.h
Genisys/: CMakeLists.txt
Genisys/Genisys/: CMakeLists.txt
Genisys/Genisys/Source/: MainComponent.cpp  MainComponent.h
Genisys/ModMatePlus/Source/: BinaryHelper.h
Genisys/Modules/: CMakeLists.txt
Genisys/Modules/Gin/examples/Demo/: Demo.jucer
Genisys/Modules/Gin/examples/Synth/: Synth.jucer
Genisys/Modules/Gin/tools/notarize/: notarize.jucer
Plugin/: CMakeLists.txt
Plugin/Source/: AvasMapping.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Scripts/: init_demo_patches.py
Shared/: CMakeLists.txt
Shared/Source/: GenisysProtocol.h  StudioConfig.h
VREngine/: CMakeLists.txt
VREngine/Source/: Main.cpp  UserPrefsPane.h  VREngineApp.h
cmake/: BinaryToCArray.cmake  FetchOnnxRuntime.cmake  FindHailoRT.cmake  toolchain-aarch64-linux.cmake
libs/incbin/: embedded_silero_vad.h  embedded_vad_model.h  incbin.h  silero_onnx_embed.c.in  vad_model_embed.c.in
