juce_add_plugin(GenisysMidiOscPlugin
    PRODUCT_NAME        "Genisys MidiToOsc"
    VERSION             "0.1"
    PLUGIN_MANUFACTURER_CODE Gnsy
    PLUGIN_CODE         GmOp
    FORMATS             VST3
    IS_MIDI_EFFECT      TRUE
    NEEDS_MIDI_INPUT    TRUE
    NEEDS_MIDI_OUTPUT   FALSE
    IS_SYNTH            FALSE)

target_sources(GenisysMidiOscPlugin
    PRIVATE
        Source/PluginProcessor.cpp
        Source/PluginEditor.cpp)

target_include_directories(GenisysMidiOscPlugin
    PRIVATE
        Source)

target_compile_definitions(GenisysMidiOscPlugin
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0)

target_link_libraries(GenisysMidiOscPlugin
    PRIVATE
        GenisysShared
        juce::juce_audio_processors
        juce::juce_gui_basics
        juce::juce_osc
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_warning_flags)
